:art: Align issue count properly

--- a/styles/linter-ui.less
+++ b/styles/linter-ui.less
@@ -7,6 +7,7 @@ linter-ui-default-panel {
 
   .panel-heading {
     display: flex;
+    align-items: center;
     flex-direction: row;
     width: 100%;
 
